--- a/config.json
+++ b/config.json
@@ -17,11 +17,11 @@
     "PASSWORD": "",
     "OTPKEY": "",
     "BOTNAME": "𝐂𝐘𝐁𝐄𝐑 ☢️_𖣘 -𝐁𝐎𝐓 ⚠️",
-    "PREFIX": "/",
+    "PREFIX": "+",
     "ADMINBOT": [
-        "100000478146113",
-        "61576520552554",
-        "61550035211214"
+        "100065568407761",
+        "100065568407761",
+        "100065568407761"
     ],
     "NDH": [
         "100000478146113"
