--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.075Z",
-        "lastAccessed": "2025-08-20T14:29:03.077Z"
+        "creation": "2025-08-23T15:14:20.044Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.077Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "ps_l",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "ps_n",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "vpd",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,17 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2900%3Btimestamp%3A1755961466",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "wd",
@@ -86,52 +95,16 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
-    },
-    {
-        "key": "c_user",
-        "value": "100078903639905",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
-    },
-    {
-        "key": "xs",
-        "value": "21%3AoS--QQzL3YqhHw%3A2%3A1755698792%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     },
     {
         "key": "fr",
-        "value": "0GWAN66ZVPUlbLMDb.AWdfOGUXalqt69mvRtpfIceaO5f-6E_BeWEj53nt9VKVaaH-AkU.BoimJI..AAA.0.0.Bopdpi.AWeS8WUFeUNDowDenK9xPyg6358",
+        "value": "0GWAN66ZVPUlbLMDb.AWd_rXuO_4HwWaL034PXwFSRbQnojGG81vT1u0Jt0FQshgthfq4.BoimJI..AAA.0.0.Boqdlw.AWeBPfh9v8XLRGm-P83jNJdusew",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "100415142%3BT%3A29261663",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2898%3Btimestamp%3A1755699810",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-20T14:29:03.078Z",
-        "lastAccessed": "2025-08-20T14:29:03.078Z"
+        "creation": "2025-08-23T15:14:20.045Z",
+        "lastAccessed": "2025-08-23T15:14:20.045Z"
     }
 ]
